rnsc/test_data/rns_integration/error/lexer/type_hints/cp_index_alias_in_super.rns
.class public MainClass
.super @cp_index 42 ; explicit constant pool index
